--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,15 @@ a:active {
     align-items: center;
     font-size: 14px;
 }
+
+.main {
+    width: 100%;
+    
+}
+
+.main1 {
+    max-width: 1409px;
+    height: 701px;
+    background-image: url(/img/Intro.png);
+    margin: 0 auto;
+}
